--- a/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
@@ -176,7 +176,7 @@
 
                         { data: "phoneNumber" },
                         { data: "emailAddress" },
-                        { data: "accountRefCodeCount" },
+                        { data: "accountRefCodeCount", orderable: false },
                         { data: "createdAt" },
                         { data: "lastActive" },
                         { data: "id" },
