--- a/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Index.cshtml
+++ b/Dashboard/Areas/SubscriptionEntity/Views/Subscription/Index.cshtml
@@ -189,7 +189,7 @@
                                  }
                              }
                         },
-                        { data: "accountSubscriptionCount" },
+                        { data: "accountSubscriptionCount", orderable: false },
                         { data: "createdAt" },
                         { data: "id" },
                     ]
