--- a/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Index.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Index.cshtml
@@ -180,99 +180,101 @@ else
 
         if ('@ViewBag.emptyLayout' == 'False') {
             function LoadTable() {
-                                var dt_ajax_table = $('.datatables');
-                                if (dt_ajax_table.length) {
-                                    var dt_ajax = dt_ajax_table.dataTable({
-                                        // Ajax Filter
-                                        ajax: {
-                                            url: '@Url.Action("LoadTable")',
-                                            type: "POST",
-                                            contentType: "application/json",
-                                            dataType: "json",
-                                            data: function (data) {
-                                                data.Fk_Player = @Model.Fk_Player;
-                                                data.Fk_Players = $("#Fk_Players").length > 0 ? $("#Fk_Players").val() : null;
-                                                data.Fk_Teams = $("#Fk_Teams").length > 0 ? $("#Fk_Teams").val() : null;
-                                                data.Fk_Away = $("#Fk_Away").length > 0 ? $("#Fk_Away").val() : @Model.Fk_Away;
-                                                data.Fk_Home = $("#Fk_Home").length > 0 ? $("#Fk_Home").val() : @Model.Fk_Home;
-                                                data.RateFrom = $("#RateFrom").length > 0 ? $("#RateFrom").val() : @Model.RateFrom;
-                                                data.RateTo = $("#RateTo").length > 0 ? $("#RateTo").val() : @Model.RateTo;
-                                                data.Fk_GameWeak = $("#Fk_GameWeak").length > 0 ? $("#Fk_GameWeak").val() : @Model.Fk_GameWeak;
-                                                data.Fk_Season = $("#Fk_Season").length > 0 ? $("#Fk_Season").val() : @Model.Fk_Season;
-                                                data.IsEnded = $("#IsEnded").val();
-                                                return JSON.stringify(data);
-                                            }
-                                        },
-                                                                        
-                                        // Columns Setups
-                                        columns: [
-                                            { data: "id" },
-                                            {
-                                                data: "player",
-                                                render: function (data, type, row) {
-                                                    var span = '';
-                                                    if (row.imageUrl != null) {
+                var dt_ajax_table = $('.datatables');
+                if (dt_ajax_table.length) {
+                    var dt_ajax = dt_ajax_table.dataTable({
+                        // Ajax Filter
+                        ajax: {
+                            url: '@Url.Action("LoadTable")',
+                            type: "POST",
+                            contentType: "application/json",
+                            dataType: "json",
+                            data: function (data) {
+                                data.Fk_Player = @Model.Fk_Player;
+                                data.Fk_Players = $("#Fk_Players").length > 0 ? $("#Fk_Players").val() : null;
+                                data.Fk_Teams = $("#Fk_Teams").length > 0 ? $("#Fk_Teams").val() : null;
+                                data.Fk_Away = $("#Fk_Away").length > 0 ? $("#Fk_Away").val() : @Model.Fk_Away;
+                                data.Fk_Home = $("#Fk_Home").length > 0 ? $("#Fk_Home").val() : @Model.Fk_Home;
+                                data.RateFrom = $("#RateFrom").length > 0 ? $("#RateFrom").val() : @Model.RateFrom;
+                                data.RateTo = $("#RateTo").length > 0 ? $("#RateTo").val() : @Model.RateTo;
+                                data.Fk_GameWeak = $("#Fk_GameWeak").length > 0 ? $("#Fk_GameWeak").val() : @Model.Fk_GameWeak;
+                                data.Fk_Season = $("#Fk_Season").length > 0 ? $("#Fk_Season").val() : @Model.Fk_Season;
+                                data.IsEnded = $("#IsEnded").val();
+                                data.DashboardSearch = $("#DataTables_Table_0_filter input").val();
+                                
+                                return JSON.stringify(data);
+                            }
+                        },
+                                                        
+                        // Columns Setups
+                        columns: [
+                            { data: "id" },
+                            {
+                                data: "player", orderable: false,
+                                render: function (data, type, row) {
+                                    var span = '';
+                                    if (row.imageUrl != null) {
 
-                                                        return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" ><div class="avatar me-1">'
-                                                            + '<img src="' + data.imageUrl + '"  height="32" width="32">'
-                                                            + span
-                                                            + '</div></div>'
-                                                            + ' <div class= "d-flex flex-column">'
-                                                            + '<a href="/TeamEntity/Player/Profile/' + data.id + '" class= "user_name text-truncate">'
-                                                            + '<span class= "fw-bolder">' + data.name + '</span></a> '
-                                                            + '<small class= "emp_post text-muted" ></small ></div></div>';
-                                                    }
-                                                    else {
-                                                        return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" >'
-                                                            + '<div class="avatar  bg-light-dark  me-1"><span class="avatar-content"></span>' + span + '</div>'
-                                                            + '</div>'
-                                                            + ' <div class= "d-flex flex-column">'
-                                                            + '<a href="/TeamEntity/Player/Profile/' + data.id + '" class= "user_name text-truncate">'
-                                                            + '<span class= "fw-bolder">' + data.name + '</span></a> '
-                                                            + '<small class= "emp_post text-muted" ></small ></div></div>';
-                                                    }
+                                        return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" ><div class="avatar me-1">'
+                                            + '<img src="' + data.imageUrl + '"  height="32" width="32">'
+                                            + span
+                                            + '</div></div>'
+                                            + ' <div class= "d-flex flex-column">'
+                                            + '<a href="/TeamEntity/Player/Profile/' + data.id + '" class= "user_name text-truncate">'
+                                            + '<span class= "fw-bolder">' + data.name + '</span></a> '
+                                            + '<small class= "emp_post text-muted" ></small ></div></div>';
+                                    }
+                                    else {
+                                        return '<div class="d-flex justify-content-left align-items-center"><div class= "avatar-wrapper" >'
+                                            + '<div class="avatar  bg-light-dark  me-1"><span class="avatar-content"></span>' + span + '</div>'
+                                            + '</div>'
+                                            + ' <div class= "d-flex flex-column">'
+                                            + '<a href="/TeamEntity/Player/Profile/' + data.id + '" class= "user_name text-truncate">'
+                                            + '<span class= "fw-bolder">' + data.name + '</span></a> '
+                                            + '<small class= "emp_post text-muted" ></small ></div></div>';
+                                    }
 
 
-                                                }
-                                            },
-                                            { data: "ranking" },
-                                            { data: "totalPoints" },
-                                            { data: "position" },
-                                            { data: "teamGameWeak.home.name", orderable: false },
-                                            { data: "teamGameWeak.away.name", orderable: false },
-                                            { data: "teamGameWeak.gameWeak.season.name", orderable: false },
-                                            { data: "teamGameWeak._365_MatchId", orderable: false },
-                                            { data: "teamGameWeak.gameWeak.name", orderable: false },
-                                            { data: "teamGameWeak.homeScore", orderable: false },
-                                            { data: "teamGameWeak.awayScore", orderable: false },
-                                            { data: "teamGameWeak.startTime", orderable: false },
-                                            { 
-                                                data: "teamGameWeak.isEnded" , orderable: false,
-                                                render: function(data) {
-                                                  if (data) {
-                                                      return '@Localizer.Get("Yes")'
-                                                  } else {
-                                                      return '@Localizer.Get("No")'
-                                                  }
-                                                } 
-                                            },
-                                            { data: "id" },
-                                        ]
-                                    });
-                                    $("button[type=reset]").on("click", function () {
-                                        $(".dt-date").each(function () {
-                                            $(this).val('');
-                                        })
-                                    });
-                    
-                                    $('body').on('submit', '.filter', function () {
-                                        event.preventDefault();
-                                        dt_ajax_table.DataTable().draw();
-                                    });
-                    
-                    
                                 }
-                            };
+                            },
+                            { data: "ranking" },
+                            { data: "totalPoints" },
+                            { data: "position" },
+                            { data: "teamGameWeak.home.name", orderable: false },
+                            { data: "teamGameWeak.away.name", orderable: false },
+                            { data: "teamGameWeak.gameWeak.season.name", orderable: false },
+                            { data: "teamGameWeak._365_MatchId", orderable: false },
+                            { data: "teamGameWeak.gameWeak.name", orderable: false },
+                            { data: "teamGameWeak.homeScore", orderable: false },
+                            { data: "teamGameWeak.awayScore", orderable: false },
+                            { data: "teamGameWeak.startTime", orderable: false },
+                            { 
+                                data: "teamGameWeak.isEnded" , orderable: false,
+                                render: function(data) {
+                                  if (data) {
+                                      return '@Localizer.Get("Yes")'
+                                  } else {
+                                      return '@Localizer.Get("No")'
+                                  }
+                                } 
+                            },
+                            { data: "id" },
+                        ]
+                    });
+                    $("button[type=reset]").on("click", function () {
+                        $(".dt-date").each(function () {
+                            $(this).val('');
+                        })
+                    });
+    
+                    $('body').on('submit', '.filter', function () {
+                        event.preventDefault();
+                        dt_ajax_table.DataTable().draw();
+                    });
+    
+    
+                }
+            };
         } else {
             function LoadTable() {
                         var dt_ajax_table = $('.datatables');
@@ -286,6 +288,8 @@ else
                                     dataType: "json",
                                     data: function (data) {
                                         data.Fk_Player = @Model.Fk_Player;
+                                        data.DashboardSearch = $("#DataTables_Table_0_filter input").val();
+                                        
                                         return JSON.stringify(data);
                                     }
                                 },
